# public/openapi.yaml
@@ -7,7 +7,7 @@ paths:
   /acquirers:
     get:
       tags:
-        - 'List Acquirers'
+        - Acquirers
       summary: 'List Acquirers'
       description: 'List All Acquirers'
       operationId: listAcquirers
@@ -33,20 +33,10 @@ paths:
                   id: 3
                   name: blue
                   default: false
-  /health:
-    get:
-      tags:
-        - 'Health Check'
-      summary: 'Health Check'
-      description: 'Health Check'
-      operationId: health
-      responses:
-        '200':
-          description: 'Application Is Alive'
   '/scenarios/{id}':
     get:
       tags:
-        - 'Get Scenario By Id'
+        - 'Payment Scenario'
       summary: 'Get Scenario By Id'
       description: 'Get Scenario By Id'
       operationId: getScenarioById
@@ -69,7 +59,7 @@ paths:
           description: 'Can''t find any scenario with the given id.'
     put:
       tags:
-        - 'Update Payment Scenario'
+        - 'Payment Scenario'
       summary: 'Update Payment Scenario'
       description: 'Update Payment Scenario'
       operationId: 'Update Payment Scenario'
@@ -104,7 +94,7 @@ paths:
                 $ref: '#/components/schemas/PaymentScenarioResource'
     delete:
       tags:
-        - 'Delete Scenario'
+        - 'Payment Scenario'
       summary: 'Delete Scenario'
       description: 'Delete Scenario'
       operationId: deleteScenario
@@ -124,7 +114,7 @@ paths:
   /acquirer-prioritization:
     get:
       tags:
-        - 'Get Acquirer Prioritization'
+        - 'Acquirer Prioritization'
       summary: 'Get Acquirer Prioritization'
       description: 'Get Acquirer Prioritization By Parameters'
       operationId: 'Get Acquirer Prioritization'
@@ -155,7 +145,7 @@ paths:
   /scenarios:
     get:
       tags:
-        - 'Search Scenarios'
+        - 'Payment Scenario'
       summary: 'Search Scenarios'
       description: 'Search Scenarios By Parameters'
       operationId: 'Search Scenarios'
@@ -204,7 +194,7 @@ paths:
                 $ref: '#/components/schemas/PaymentScenarioPaginatorResource'
     post:
       tags:
-        - 'Create Payment Scenario'
+        - 'Payment Scenario'
       summary: 'Create Payment Scenario'
       description: 'Create Payment Scenario'
       operationId: 'Create Payment Scenario'
